--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "leaflet": "^1.9.4"
   }
 }
